--- a/Notifications/CMakeLists.txt
+++ b/Notifications/CMakeLists.txt
@@ -1,56 +1,42 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(untitled VERSION 0.1 LANGUAGES CXX)
+project(Notifications VERSION 0.1 LANGUAGES CXX)
 
+set(CMAKE_AUTOMOC ON)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_AUTORCC ON)
 
-find_package(Qt6 REQUIRED COMPONENTS Quick)
+find_package(Qt6 6.2 COMPONENTS Quick REQUIRED)
 
-qt_standard_project_setup(REQUIRES 6.5)
-
-qt_add_executable(appuntitled
+qt_add_executable(appNotifications
     main.cpp
 )
 
-qt_add_qml_module(appuntitled
-    URI untitled
+qt_add_qml_module(appNotifications
+    URI Notifications
     VERSION 1.0
-    QML_FILES
-        Main.qml
-        QML_FILES MyExpandableSection.qml
-        QML_FILES AdditionalSidePanel.qml
-        QML_FILES MyStackArea.qml
-        QML_FILES MyAddtionalParameters.qml
-        QML_FILES snowyeffect.frag.qsb
-        QML_FILES snowyeffect.vert.qsb
-        QML_FILES AllNotification.qml
+    QML_FILES main.qml
+    QML_FILES AllNotification.qml
+    QML_FILES MyStackArea.qml
 
-        RESOURCES res.qrc
-        SOURCES NotificationModel.h NotificationModel.cpp
-        SOURCES
-        SOURCES NotificationManger.h NotificationManger.cpp
-        SOURCES UnseenNotificationModel.h UnseenNotificationModel.cpp
+    SOURCES UnseenNotificationModel.cpp NotificationModel.cpp NotificationManger.cpp
+    SOURCES UnseenNotificationModel.h NotificationModel.h NotificationManger.h
 )
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
 # explicit, fixed bundle identifier manually though.
-set_target_properties(appuntitled PROPERTIES
-#    MACOSX_BUNDLE_GUI_IDENTIFIER com.example.appuntitled
+set_target_properties(appNotifications PROPERTIES
+#    MACOSX_BUNDLE_GUI_IDENTIFIER com.example.appNotifications
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
     MACOSX_BUNDLE TRUE
     WIN32_EXECUTABLE TRUE
 )
 
-target_link_libraries(appuntitled
-    PRIVATE Qt6::Quick
-)
+target_link_libraries(appNotifications
+    PRIVATE Qt6::Quick)
 
 include(GNUInstallDirs)
-install(TARGETS appuntitled
+install(TARGETS appNotifications
     BUNDLE DESTINATION .
-    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-)
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
